INCLUDES = $(perl_flags)

bin_PROGRAMS = opendchub

opendchub_SOURCES =	\
	commands.c	\
	commands.h	\
	fileio.c 	\
	fileio.h	\
	main.c		\
	main.h		\
	network.c	\
	network.h	\
	perl_utils.c	\
	perl_utils.h	\
	userlist.c	\
	userlist.h	\
	utils.c		\
	utils.h		\
	xs_functions.c	\
	xs_functions.h
	
opendchub_LDADD = $(perl_libs)
